added dates to experiences

--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -8,6 +8,8 @@
 <%=f.number_field :price%><br>
 <%=f.label :location%><br>
 <%=f.text_field :location%><br>
+<%=f.label :date%><br>
+<%=f.date_field :date%><br>
 <%=f.label :time%><br>
 <%=f.time_field :time%><br>
 <h4>Check if this has been paid
