--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,7 +45,7 @@ body {
 }
 
 #footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 2.5rem;            /* Footer height */
@@ -70,11 +70,12 @@ li{
 
 }
 
-.nav-bar ul li{
-  color: white;
+.nav-bar ul li {
   display: inline;
   padding: 8px;
   background-color: black;
+
+
 }
 
 .nav-bar ul{
@@ -84,7 +85,17 @@ li{
   margin-bottom: 10px;
 }
 
+.nav-bar-link{
+  text-decoration: none;
+  color: white;
+}
+
+
 header{
   padding-bottom: 30px;
   margin-bottom: 10px;
+}
+
+.black{
+  color: black;
 }
