--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -5,13 +5,13 @@
 
 <strong>Where you will be staying</strong>
 <%destination_hotels(@destination).each do |hotel|%>
-<li><%=hotel.name%></li>
+<li><%=link_to hotel.name, hotel_path(hotel), :class => 'black'%></li>
 <%end%><br>
 
 <strong>What you will be doing</strong>
 
 <%destination_experiences(@destination).each do |exp|%>
-<li><%=exp.name%></li>
+<li><%=link_to exp.name, experience_path(exp), :class => 'black'%></li>
 <%end%>
 
 <%=button_to "Add Hotel", new_hotel_path, :id=> "destination_button_top", :method => "get", params:{:destination_id => @destination.id}%><br>
