--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,8 +9,8 @@
 
 <h2>Create a New Trip</h2>
 <%=form_for @trip do |f|%>
-<%=f.hidden_field :user_id, :value => current_user.id%>
+<%=f.hidden_field :user_id, :value => current_user.id, :id => "user_id"%>
 <%=f.label :name%>
-<%=f.text_field :name%>
-<%=f.submit "submit"%>
+<%=f.text_field :name, :id => "name"%>
+<%=f.submit  "submit" %>
 <%end%>
