changed form_for to form_with for new trip form for ajax

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 <div class='nav-bar'>
   <ul>
     <li><%=link_to "Home", user_path(current_user), :class => "nav-bar-link"%></li>
+    <li><%=link_to "My Trips", user_path(current_user), :class => 'nav-bar-link'%></li>
   </ul>
 </div>
 </header>
