used jquery to edit trip dates

--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,6 +1,7 @@
 <h1><%=@trip.name%></h1>
-<%=display_dates(@trip)%>
-
+<div id="dates">
+  <%=display_dates(@trip)%>
+</div>
 <%=render 'edit_time'%><br>
 
 
