--- a/app/views/trips/_edit_time.html.erb
+++ b/app/views/trips/_edit_time.html.erb
@@ -1,4 +1,4 @@
-<%=form_for @trip do |f|%>
+<%=form_with model: @trip, class: 'edit_trip' do |f|%>
 <%=f.label :start%>
 <%=f.date_field :start%><br>
 <%=f.label :end%>
