--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -14,5 +14,11 @@
 <li><%=link_to exp.name, experience_path(exp), :class => 'black'%></li>
 <%end%>
 
-<%=button_to "Add Hotel", new_hotel_path, :id=> "destination_button_top", :method => "get", params:{:destination_id => @destination.id}%><br>
-<%=button_to "Add Experience", new_experience_path, :class => "additional_buttons", :method => "get", params:{:destination_id => @destination.id}%>
+<div class="destination-seperation">
+  <%=button_to "Add Transportation To", new_transport_to_path, method: "get", params:{destination_id: @destination.id} %>
+  <%=button_to "Add Transportation From"%>
+</div>
+<div class="destination-seperation">
+  <%=button_to "Add Hotel", new_hotel_path, :id=> "destination_button_top", :method => "get", params:{:destination_id => @destination.id}%>
+  <%=button_to "Add Experience", new_experience_path, :class => "additional_buttons", :method => "get", params:{:destination_id => @destination.id}%>
+</div>
