--- a/app/views/destinations/new.html.erb
+++ b/app/views/destinations/new.html.erb
@@ -6,14 +6,8 @@
   <%=f.text_field :name %><br style="line-height:100">
 </div>
 <div class="destination-seperation">
-  <strong class="destination-seperation">Notes:</strong><h5 class="destination"> City or Province<br>
-  <%=f.text_area :notes %><br style="line-height:100">
-</div>
-<div class="destination-seperation">
-  <button type="button" name="button">Add Transportation To</button>
-</div>
-<div class="destination-seperation">
-  <button type="button" name="button">Add Transportation From</button>
+  <strong class="destination-seperation">Notes:</strong><h5 class="destination"><br>
+  <%=f.text_area :notes, :placeholder => "You can add this later" %><br style="line-height:100">
 </div>
 <%=f.submit%>
 
