--- a/app/views/transport_tos/new.html.erb
+++ b/app/views/transport_tos/new.html.erb
@@ -1,8 +1,9 @@
 <h1>Add Transportation Details</h1>
 
 <%=form_with model: @transport_to, local: true do |f|%>
+  <%=f.hidden_field :destination_id, :value => @transport_to.destination_id%>
   <%=label_tag :type%><br>
-  <%=f.text_field :type%><br>
+  <%=f.text_field :transport_type%><br>
   <%=label_tag :price%><br>
   <%=f.number_field :price%><br>
   <%=label_tag :third_party%><br>
