--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -93,7 +93,9 @@ li{
 
 header{
   padding-bottom: 30px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  width: 100%;
+  display: inline-block;
 }
 
 .black{
