--- a/app/assets/stylesheets/transport_tos.css
+++ b/app/assets/stylesheets/transport_tos.css
@@ -1,14 +1,14 @@
 
 #transport_to_display{
-  background-color: black;
-  color: white;
+  color: black;
   border-width: 5px;
-  border-color: red;
+  border-color: black;
   border-style: solid;
-  width: 25%;
+  width: 30%;
   height: 300px;
   display: inline-block;
-  text-align: center;
+  position: none;
+  float:left;
 
 
 }
@@ -19,16 +19,19 @@
 
 }
 
+#destination-heading{
+  //background-color: black;
+}
+
+
 #transport_from_display{
-  background-color: black;
-  color: white;
+  color: black;
   border-width: 5px;
-  border-color: red;
+  border-color: black;
   border-style: solid;
-  width: 25%;
+  width: 30%;
   height: 300px;
   display: inline-block;
-  text-align: center;
-
-
+  position: none;
+  float:right;
 }
