added date display for transport_to

--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%=@trip.name%></h1>
 <div id="dates">
-  <%=display_dates(@trip)%>
+  <%=display_trip_dates(@trip.start, @trip.end)%>
 </div>
 <%=render 'edit_time'%><br>
 
