--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -7,7 +7,7 @@
     <%if display_transport_to(@destination)%>
       <h1><%=@destination.transport_to.transport_type%></h1>
       <p>$<%=@destination.transport_to.price%></p>
-      <p><%=@destination.transport_to.time_leaving%></p>
+      <p>Leaving: <%=display_transport_to_dates(@destination.transport_to.time_leaving)%></p>
       <p><%=@destination.transport_to.time_arriving%></p>
       <p><%=@destination.transport_to.paid ? "Paid" : "Unpaid"%></p>
     <%end%>
@@ -39,6 +39,6 @@
   </div>
 </div>
 
-<div id="transport_from_display" <%= "style= border-style:none;" if !@destination.transport_to%>>
+<div id="transport_from_display" <%= "style= border-style:none;" if !@destination.transport_from%>>
 
 </div>
