--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -8,7 +8,7 @@
       <h1><%=@destination.transport_to.transport_type%></h1>
       <p>$<%=@destination.transport_to.price%></p>
       <p>Leaving: <%=display_transport_to_dates(@destination.transport_to.time_leaving)%></p>
-      <p><%=@destination.transport_to.time_arriving%></p>
+      <p>Arriving: <%=display_transport_to_dates(@destination.transport_to.time_arriving)%></p>
       <p><%=@destination.transport_to.paid ? "Paid" : "Unpaid"%></p>
     <%end%>
   </div>
@@ -40,5 +40,11 @@
 </div>
 
 <div id="transport_from_display" <%= "style= border-style:none;" if !@destination.transport_from%>>
-
+  <%if display_transport_from(@destination)%>
+    <h1><%=@destination.transport_to.transport_type%></h1>
+    <p>$<%=@destination.transport_to.price%></p>
+    <p>Leaving: <%=display_transport_to_dates(@destination.transport_from.time_leaving)%></p>
+    <p>Arriving: <%=display_transport_to_dates(@destination.transport_from.time_arriving)%></p>
+    <p><%=@destination.transport_to.paid ? "Paid" : "Unpaid"%></p>
+  <%end%>
 </div>
