--- a/app/views/transport_tos/_form.html.erb
+++ b/app/views/transport_tos/_form.html.erb
@@ -13,7 +13,7 @@
   <%=label_tag "Where will you be leaving from?"%><br>
   <%=f.text_area :leaving_from_location%><br>
   <%=label_tag "Where will you be arriving at?"%><br>
-  <%=f.text_area :leaving_from_location%><br>
+  <%=f.text_area :arriving_at_location%><br>
   <%=label_tag "Has this been paid?"%>
   <%=f.check_box :paid%><br>
   <%=submit_tag "submit"%>
